# initpp

./: README.md  generator.py  includesHandler.py  initpp.py  libraries.py
example/: CMakeLists.txt
example/include/: initpp.h
example_project/: CMakeLists.txt
example_project/src/: main.cpp
templates/: CMakeLists.txt
